--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,72 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  width: 100%;
+  min-height: 100vh;
+  background: hsl(218, 23%, 16%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-text {
+  position: relative;
+  width: 350px;
+  min-height: 230px;
+  height: auto;
+  padding: 22px;
+  background: hsl(217, 19%, 24%);
+  box-shadow: 0 0 20px hsl(218, 23%, 16%);
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.box-text h3 {
+  color: hsl(150, 100%, 66%);
+}
+
+.box-text p {
+  color: hsl(193, 38%, 86%);
+  margin: 25px 0;
+}
+
+.hias {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.hias img{
+  width: 250px;
+}
+
+.btn-refresh {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  bottom: -23px;
+  left: calc(50% - 23px);
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  cursor: pointer;
+  background: hsl(150, 100%, 66%);
+  transition: all linear .3s;
+}
+
+.btn-refresh:hover {
+  box-shadow: 0px 0px 30px rgba(82, 255, 168, .7);
+}
+
+.btn-refresh:active {
+  transform: scale(1.2);
+}
+
+.btn-refresh img {
+  width: 20px;
 }
